--- a/public/libs/css/generalComponentsStyle.styl
+++ b/public/libs/css/generalComponentsStyle.styl
@@ -4,8 +4,6 @@ shadow-grey = #808080
 main-text-color = #212121
 add-text-color = #F2992E
 main-blue = #1d8dbf
-html
-    overflow-y scroll
 button()
     box-shadow 0px 0px 10px 0px grey
     display flex
@@ -21,6 +19,7 @@ button()
     height 50px
     transition 0.2s
     cursor pointer
+    border none
     &:hover
         box-shadow 0px 0px 0px 1px white, 0px 0px 0px 4px main-blue
     &:active
