integrate checkins to separator

--- a/frontend/components/checkinsWrapper/checkinsWrapper.template.pug
+++ b/frontend/components/checkinsWrapper/checkinsWrapper.template.pug
@@ -3,7 +3,7 @@
     .resize-content
         .resize-row
             section#one(resizable='', r-directions="['right']", r-flex='true')
-                p Works with flexbox.
+                p Months calendar will be here
             section#two
-                p 2
+                checkins-component
 
