inegrate checkins-info to main page

--- a/frontend/components/checkinsWrapper/checkinsWrapper.styl
+++ b/frontend/components/checkinsWrapper/checkinsWrapper.styl
@@ -3,7 +3,6 @@
   height 500px
   margin 0 auto
 
-
 .resize-main
   display flex
   height 100%
@@ -35,10 +34,23 @@
 section
   box-sizing border-box
   border-radius 10px
-  padding 1.25em 1.75em
   flex 1
   min-width 30px
   &.resizable
     flex 0 0 300px
+#two
+  overflow-y scroll
+  margin-left 5px
+#one
+  margin-right 5px
+.icon
+  font-size 16px
+  margin 0 5px
+
+.icon-big
+  font-size 32px
+  border 2px dashed black
+  color black
+  padding 10px 11px 10px 10px
 
 
