--- a/frontend/components/checkinsWrapper/checkinsWrapper.template.pug
+++ b/frontend/components/checkinsWrapper/checkinsWrapper.template.pug
@@ -2,8 +2,8 @@
  .resize-main
     .resize-content
         .resize-row
-            section#one(resizable='', r-directions="['right']", r-flex='true')
+            section#one(resizable r-directions="['right']", r-flex='true')
                 p Months calendar will be here
             section#two
-                checkins-component
+                checkins-info-component
 
