--- a/frontend/components/createProject/createProject.component.styl
+++ b/frontend/components/createProject/createProject.component.styl
@@ -81,6 +81,18 @@
 					button()
 					margin-top 30px
 					padding 0 45px
+			.addUser
+				display flex
+				align-items center
+				justify-content center
+				text-decoration none
+				lable
+					font-family "Open Sans"
+					font-size 18px
+					margin-left 5px
+					line-height 24px
+				i
+					font-size 24px
 			.projParticipants
 				width 100%
 				display block-flex
