--- a/frontend/components/calendar/calendarMonth/calendarMonth.styl
+++ b/frontend/components/calendar/calendarMonth/calendarMonth.styl
@@ -24,6 +24,9 @@
             .show-current-month
                 font-family "Montserrat"
                 font-size 1.8em
+            .calendar-picker
+                font-size 1.8em
+                margin-left 20px
             .datepicker
                 position absolute
                 background-color #F5F5F5
