--- a/frontend/components/calendar/calendarDaily/calendarDaily.styl
+++ b/frontend/components/calendar/calendarDaily/calendarDaily.styl
@@ -18,6 +18,9 @@
             .show-current-day
                 font-family "Montserrat"
                 font-size 1.8em
+            .calendar-picker
+                font-size 1.8em
+                margin-left 20px
             .datepicker
                 position absolute
                 background-color #F5F5F5
