#42 - correction header in messageBoard

--- a/frontend/components/menu/menuStyles.styl
+++ b/frontend/components/menu/menuStyles.styl
@@ -4,7 +4,7 @@
     padding-top 2%
     position fixed
     left 0
-    top 0px
+    top 0
     z-index 10
     *
         box-sizing border-box
@@ -31,7 +31,7 @@
         background-color #fbfbfb;
         position: absolute;
         left: 0;
-        width: 180px;
+        width: 185px;
         overflow: hidden;
         -webkit-transition: width 0.2s linear;
         transition: width 0.2s linear;
@@ -65,7 +65,7 @@
         position: relative;
         display: table-cell;
         vertical-align: middle;
-        width: 120px;
+        width: 125px;
         font-family: "Montserrat", sans-serif;
     .no-touch .scrollable.hover
         overflow-y: hidden;
