--- a/frontend/components/messageBoard/messageBoard.styl
+++ b/frontend/components/messageBoard/messageBoard.styl
@@ -1,3 +1,4 @@
+@import "../../../public/libs/css/generalComponentsStyle.styl"
 .messageBoard-wrapper
     text-align center
     background-color #F5F5F5
@@ -10,45 +11,36 @@
     div.header
         font-size 1.6em
         margin-bottom 50px
-        h2
+        .wrapper_lable
+            display flex
+            align-items center
+            justify-content center
+            flex-wrap wrap
             color #212121
             font-size 1.8em
             font-family "Montserrat"
-            margin-bottom 0.83em
-        hr
-            margin-top -4%
-            box-sizing: content-box
-            width 40%
-            height 1px
-            background-color #616161
-            margin-bottom 2%
-        div
-            box-sizing: content-box;
-            -moz-user-select -moz-none
-            -o-user-select none
-            -khtml-user-select none
-            -webkit-user-select none
-            user-select none
-            box-shadow 0 0 10px 0 GREY
-            display flex
-            justify-content center
-            align-items center
-            margin-top 1%
-            border-radius 5px
-            background-color #1D8DBF
-            color WHITE
-            padding 1% 3% 1% 3%
-            font-size 30px
-            height 50px
-            transition 0.2s
-            cursor pointer
-            &:active
-                box-shadow 0 0 0 0.5px WHITE, 0 0 0 2px main-blue, 0 0 5px 0 WHITE inset
-            &:hover
-                box-shadow 0 0 0 1px white, 0 0 0 4px #1D8DBF
-            margin-left 34.5%
-            font-family "Montserrat"
-            width 25%
+            h1
+                width 100%
+                margin-bottom 0
+            &:after
+                content ''
+                height 1px
+                margin-top 0.3em
+                width 80%
+                display block
+                background-image -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
+                background-image    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
+                background-image     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
+                background-image      -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
+        .wrapper_createButton
+            margin 30px 0
+            button
+                button()
+                font-family "Montserrat"
+                line-height 32.406px
+                font-size 1.2em
+                border none
+                outline none
 
     .message-block
         margin 0 5% 5% 5%
