--- a/frontend/components/project/project.component.pug
+++ b/frontend/components/project/project.component.pug
@@ -66,7 +66,7 @@
               a(type='button', ng-click='proj.open()')
                 i.fa.fa-calendar(aria-hidden='true')
         .wrap.last
-          .delete_button
+          .delete_button(ng-if="proj.isUserAdmin")
             button.delete(ng-click="proj.modalToggle()") Delete project
           .confirming_modal(ng-if="proj.modalFlag")
             .background(ng-click="proj.modalToggle()")
