fix layout of the main page

--- a/frontend/components/checkinsWrapper/checkinsWrapper.template.pug
+++ b/frontend/components/checkinsWrapper/checkinsWrapper.template.pug
@@ -1,9 +1,11 @@
-.checkins-wrapper
- .resize-main
-    .resize-content
-        .resize-row
-            section#one(resizable r-directions="['right']", r-flex='true')
-                p Months calendar will be here
-            section#two
-                checkins-info-component
+.content
+  .resizable-row(resizable='', r-directions="['bottom']", r-flex='true')
+    section#one(resizable='', r-directions="['right']", r-flex='true')
+      p Month calendar will be here.
+    section#two
+      .checkins-info-container
+        checkins-info-component
+
+
+
 
