--- a/frontend/components/checkinsWrapper/checkinsWrapper.styl
+++ b/frontend/components/checkinsWrapper/checkinsWrapper.styl
@@ -1,56 +1,26 @@
-.checkins-wrapper
-  width 90%
-  height 500px
-  margin 0 auto
+.content
+    flex 1
+    display flex
+    flex-flow column nowrap
+    justify-content space-around
+    align-content space-around
 
-.resize-main
-  display flex
-  height 100%
-  background #fff
-  border 1px solid border-grey
-  border-radius 10px
-  background-color white
-  box-shadow 0px 5px 20px 2px  #808080
-
-.resize-content
-  flex 1
-  display flex
-  flex-flow column nowrap
-  justify-content space-around
-  align-content space-around
-  padding 7px
-  overflow hidden
-
-.resize-row
-  min-height 50px
-  flex 1
-  display flex
-  flex-flow row nowrap
-  justify-content space-around
-  align-content space-around
-  &.resizable
-    flex 0 0 300px
+.resizable-row
+    min-height 50px
+    flex 1
+    display flex
+    flex-flow row nowrap
+    &.resizable
+        flex 0 0 300px
 
 section
-  box-sizing border-box
-  border-radius 10px
-  flex 1
-  min-width 30px
-  &.resizable
-    flex 0 0 300px
+    box-sizing border-box
+    border-radius 10px
+    margin 7px
+    background white
+    flex 1
+    min-width 30px
+    &.resizable
+        flex 0 0 400px
 #two
-  overflow-y scroll
-  margin-left 5px
-#one
-  margin-right 5px
-.icon
-  font-size 16px
-  margin 0 5px
-
-.icon-big
-  font-size 32px
-  border 2px dashed black
-  color black
-  padding 10px 11px 10px 10px
-
-
+    overflow-y scroll
