--- a/frontend/components/reports/reports.template.pug
+++ b/frontend/components/reports/reports.template.pug
@@ -3,7 +3,6 @@
         .col-xs-12.col-md-10.reports-holder
             .row.reports-header
                 h3.col-xs-10 Reports
-                .col-xs-1.col-xs-offset-1.fa.fa-close.button.font-button
             .row.generate-holder.center-xs
                 h3.col-xs-6 Quckly report generating
                 .col-xs-12
@@ -27,10 +26,10 @@
                                 td.col-xs-2
                                     .row.around-xs
                                         span.col-xs-4.fa.fa-eye.button.f-btn(ng-link = "['Reports Edit', {id: reports.recentReports[$index]._id}]")
-                                        span.col-xs-4.fa.fa-trash.button.f-btn
+                                        span.col-xs-4.fa.fa-trash.button.f-btn(ng-click='reports.deleteReport(reports.recentReports[$index]._id)')
                         h4.col-xs-12.start-xs(ng-show="!reports.recentReports") You don't have reports yet
                     .row(ng-show="reports.recentReports")
-                        .col-xs-1.col-xs-offset-11.button.btn More
+                        .col-xs-1.col-xs-offset-11.button.btn(ng-click='reports.manageMore("recent")' ng-hide="(reports._reports.length==reports.recentReports.length) && !reports.isRecentMore ") {{reports.isRecentMore ? 'Less' : 'More'}}
             hr
             .row.reports-samples
                 .col-xs-12
@@ -44,8 +43,8 @@
                                     .col-xs-8.item-title {{r.title}}
                                     .col-xs-4
                                         .row.around-xs
-                                            span.col-xs-5.fa.fa-eye.button.f-btn(ng-link = "['Reports Edit', {id: reports.recentReports[$index]._id}]")
-                                            span.col-xs-5.fa.fa-trash.button.f-btn
+                                            span.col-xs-5.fa.fa-eye.button.f-btn(ng-link = "['Reports Edit', {id: reports.savedReports[$index]._id}]")
+                                            span.col-xs-5.fa.fa-trash.button.f-btn(ng-click='reports.deleteReport(reports.savedReports[$index]._id)')
                                 hr
                                 .row.start-xs.item-row(ng-show = "r.participants")
                                     .col-xs-4
@@ -64,4 +63,4 @@
                                         span.row.item-value {{r.dateRange[0] | date : 'dd/MM/y'}} - {{r.dateRange[1] | date : 'dd/MM/y'}}
 
                     .row
-                        .col-xs-1.col-xs-offset-11.button.btn More
+                        .col-xs-1.col-xs-offset-11.button.btn(ng-click='reports.manageMore("saved")' ng-hide="(reports.savedReports.length==reports._saved.length) && !reports.isSavedMore ") {{reports.isSavedMore ? 'Less' : 'More'}}
