--- a/frontend/components/reports/reportsStyle.styl
+++ b/frontend/components/reports/reportsStyle.styl
@@ -34,6 +34,7 @@
             td
                 padding 1%
                 text-align left
+                word-break break-all
             .t-head
                 font-family "Montserrat"
                 font-size 20px
@@ -66,6 +67,7 @@
             font-size 18px
             .item-title
                 font-size 20px
+                word-break break-all
             .item-def
                 font-weight bold
                  font-size 20px
