--- a/frontend/components/checkins/checkins-pug.component.pug
+++ b/frontend/components/checkins/checkins-pug.component.pug
@@ -38,7 +38,7 @@
                 ul.content
                     li.qq {{checkin.time}}
                     li.qq
-                        a(ng-link='["CheckinsInfo"]') {{checkin.question}}
+                        a(ng-link="['CheckinsInfo', {id: checkin._id}]") {{checkin.question}}
                     li.qq
                         div
                             label.switch
@@ -62,7 +62,7 @@
                 ul.content
                     li.qq {{checkin.time}}
                     li.qq
-                        a(ng-link='["CheckinsInfo"]') {{checkin.question}}
+                        a(ng-link="['CheckinsInfo', {id: checkin._id}]") {{checkin.question}}
                     li.qq
                         div
                             label.switch
@@ -76,7 +76,7 @@
                 ul.content
                     li.qq {{checkin.time}}
                     li.qq
-                        a(ng-link='["CheckinsInfo"]') {{checkin.question}}
+                        a(ng-link="['CheckinsInfo', {id: checkin._id}]") {{checkin.question}}
                     li.qq
                         div
                             label.switch
@@ -90,7 +90,7 @@
                 ul.content
                     li.qq {{checkin.time}}
                     li.qq
-                        a(ng-link='["CheckinsInfo"]') {{checkin.question}}
+                        a(ng-link="['CheckinsInfo', {id: checkin._id}]") {{checkin.question}}
                     li.qq
                         div
                             label.switch
@@ -104,7 +104,7 @@
                 ul.content
                     li.qq {{checkin.time}}
                     li.qq
-                        a(ng-link='["CheckinsInfo"]') {{checkin.question}}
+                        a(ng-link="['CheckinsInfo', {id: checkin._id}]") {{checkin.question}}
                     li.qq
                         div
                             label.switch
@@ -118,7 +118,7 @@
                 ul.content
                     li.qq {{checkin.time}}
                     li.qq
-                        a(ng-link='["CheckinsInfo"]') {{checkin.question}}
+                        a(ng-link="['CheckinsInfo', {id: checkin._id}]") {{checkin.question}}
                     li.qq
                         div
                             label.switch
@@ -132,7 +132,7 @@
                 ul.content
                     li.qq {{checkin.time}}
                     li.qq
-                        a(ng-link='["CheckinsInfo"]') {{checkin.question}}
+                        a(ng-link="['CheckinsInfo', {id: checkin._id}]") {{checkin.question}}
                     li.qq
                         div
                             label.switch
@@ -146,7 +146,7 @@
                 ul.content
                     li.qq {{checkin.time}}
                     li.qq
-                        a(ng-link='["CheckinsInfo"]') {{checkin.question}}
+                        a(ng-link="['CheckinsInfo', {id: checkin._id}]") {{checkin.question}}
                     li.qq
                         div
                             label.switch
