--- a/public/libs/css/generalComponentsStyle.styl
+++ b/public/libs/css/generalComponentsStyle.styl
@@ -25,8 +25,8 @@ button()
     &:active
         box-shadow 0px 0px 0px 0.5px white, 0px 0px 0px 2px main-blue, 0px 0px 5px 0px white inset
 main-component()
-    padding 1%
-    border 1px solid border-grey
+    padding 1em
+    // border 1px solid border-grey
     border-radius 10px
     background-color #F5F5F5 
     box-shadow 0px 5px 20px 2px  shadow-grey
