Fix after merge Signed-off-by: AnthStep <lightlife25@gmail.com>

--- a/frontend/components/events/eventList.component.pug
+++ b/frontend/components/events/eventList.component.pug
@@ -1,5 +1,5 @@
 .events-wrapper
-    section.row.center-xs
+    .row.center-xs
         section.col-xs-8.events-holder
             section.row.events-header.center-xs
                 span.col-xs-11 Events
