--- a/frontend/components/tasks/tasksTemplate.pug
+++ b/frontend/components/tasks/tasksTemplate.pug
@@ -16,9 +16,9 @@
 		.wrapper_task.row.center-xs(ng-repeat = "task in filtredTasks = (tasksctrl.tasks | filter: tasksctrl.keyword | filter: tasksctrl.filterKey) track by $index", ng-if = "tasksctrl.contentFlag" ,   id="{{task._id}}")
 			.col-xs-12.task_header.row.middle-xs.center-xs
 				.task_progress.col-xs-4
-					.content(ng-if = "task.toDos.length") Progress: 
-						.span.countProgress(ng-if = "!task.isFinished") {{task.progress}}/{{task.toDos.length}}
-						.span.countProgress.complete(ng-if = "task.isFinished") Complete!
+					.Progress_content(ng-if = "task.toDos.length") Progress: 
+						span.countProgress(ng-if = "!task.isFinished") {{task.progress}}/{{task.toDos.length}}
+						span.countProgress.complete(ng-if = "task.isFinished") Complete!
 				.title.col-xs-5 {{task.title}}
 				.expander.col-xs-3.start-xs(ng-class = "{'no_participants': !task.participants.length,'my_task': !!(task.participants | filter: tasksctrl.currUserId).length}")
 					i.fa(aria-hidden = "true", ng-click = "tasksctrl.expand(task)",ng-class="{'fa-arrow-down': !task.expanded, 'fa-arrow-up': task.expanded}")
